# alpha-one-mlx

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/alpha_one_mlx/: reasoner.py
src/alpha_one_mlx/models/: __init__.py
